# stm-utils

./: .gitignore  CMakeLists.txt  readme.md  requirements.txt  update.py
cmake/: device.cmake  helpers.cmake  stm-utils-config.cmake.in  toolchain.cmake
cmake/toolchains/: cm4.cmake  common.cmake
cmake/toolchains/utilities/: utilities.cmake
config/: note.md
config/linker/meta/: version.ld
config/openocd/: jlink.cfg  stlink.cfg
scripts/: .gitignore
scripts/install/: st-info.bash
scripts/utils/: __init__.py  arguments.py  config.py  git.py  os.py
src/cmsis/: CMakeLists.txt
src/cmsis/core/: .gitignore  CMakeLists.txt
src/cmsis/rtos/: .gitignore  CMakeLists.txt
src/cmsis/rtos/config/: RTE_Components.h
src/cmsis/scripts/: update.py
src/device/: .gitignore  CMakeLists.txt
src/device/include/: device.h  interrupts.h  startup.h
src/device/include/device/: device.h  interrupts.h  startup.h
src/device/include/interrupts/: definitions.h  stm32f0xx.h  stm32f1xx.h  stm32f2xx.h  stm32f3xx.h  stm32f4xx.h  stm32f7xx.h  stm32g0xx.h  stm32g4xx.h  stm32h7xx.h  stm32l0xx.h  stm32l1xx.h  stm32l4xx.h  stm32l5xx.h
src/device/scripts/: link.ld  update.py
src/device/scripts/linker/: link.ld
src/device/scripts/linker/meta/: version-crc.ld
src/device/src/: startup.c
src/device/src/interrupts/: stm32f4xx.c  stm32f4xx.cpp  stm32g0xx.c  stm32g0xx.cpp  stm32wlxx.cpp
src/device/src/interrupts/include/interrupts/: definitions.h
src/device/src/interrupts/vectors/: stm32f0xx.c  stm32f1xx.c  stm32f2xx.c  stm32f3xx.c  stm32f4xx.c  stm32f7xx.c  stm32g0xx.c  stm32g4xx.c  stm32h7xx.c  stm32l0xx.c  stm32l1xx.c  stm32l4xx.c  stm32l5xx.c  stm32wlxx.c
src/hal/: .gitignore  CMakeLists.txt
src/hal/config/: hal_assert.h  hal_config.h  ll_assert.h
src/hal/config/include/: stm32_assert.h  stm32f0xx_hal_conf.h  stm32f1xx_hal_conf.h  stm32f2xx_hal_conf.h  stm32f3xx_hal_conf.h  stm32f4xx_hal_conf.h  stm32f7xx_hal_conf.h  stm32g0xx_hal_conf.h  stm32g4xx_hal_conf.h  stm32h7xx_hal_conf.h  stm32l0xx_hal_conf.h  stm32l1xx_hal_conf.h  stm32l4xx_hal_conf.h  stm32l5xx_hal_conf.h  stm32wlxx_hal_conf.h
src/hal/include/: stm32_hal.h
src/hal/scripts/: generate_ll_headers.py  parse.py  parse_hal_modules.py  update.py
